--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>Login</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" crossorigin="anonymous">
+    </head>
 <body>
+
+    {% include "header.html" %}
+    <form action="/login" method="POST">
+        <div class="form-group">
+            <label for="username" class="form-control-label">Username</label>
+            <input type="text" id="username" name="username" required placeholder="User ID or email"/>
+        </div>
+        <div class="form-group">
+            <label for="password" class="form-control-label">Username</label>
+            <input type="text" id="password" name="password" required placeholder="Password"/>
+        </div>
+        <input type="submit" class="btn btn-primary"/>
+    </form>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
