--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,30 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Signup</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" crossorigin="anonymous">
 </head>
 <body>
 
-    <form action="/signup" method="post">
-        <label for="username" class="">
-            <span>Username</span>
-            <input type="text" id="username" name="username">
-        </label>
-        <label for="password" class="">
-            <span>Password</span>
-            <input type="password" id="password" name="password">
-        </label>
-        <label for="verify" class="">
-            <span>Verify password</span>
-            <input type="password" id="verify" name="verify">
-        </label>
-        <label for="email" class="">
-            <span>E-mail</span>
-            <input type="email" id="email" name="email">
-        </label>
-        <input type="submit">
+    <form action="/signup" method="POST">
+        <div class="form-group">
+            <label for="username" class="form-control-label">Username</label>
+
+            {% if error and error == 'User already exists' %}
+                <input value='{{ username if username != None }}' type="text" id="username" name="username" class="form-control is-invalid" required>
+            {% else %}
+                <input value='{{ username if username != None }}' type="text" id="username" name="username" class="form-control" required>
+            {% endif %}
+            <div class="invalid-feedback">
+                Username already taken please choose another one
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="password" class="form-control-label">Password</label>
+            {% if error and error == 'Invalid password' %}
+                <input value='{{ password if password != None }}' type="password" id="password" name="password" class="form-control is-invalid" required>
+            {% else %}
+                <input value='{{ password if password != None }}' type="password" id="password" name="password" class="form-control" required>
+            {% endif %}
+            <div class="invalid-feedback">
+                Invalid password
+            </div>
+            <small id="passwordHelpInline" class="text-muted">
+                Must be 6-16 characters long.
+            </small>
+        </div>
+        <div class="form-group">
+            <label for="verify" class="form-control-label">Verify password</label>
+            {% if error and error == 'Password dont match' %}
+                <input value='{{ verify if verify != None }}' type="password" id="verify" name="verify" class="form-control is-invalid" required>
+            {% else %}
+                <input value='{{ verify if verify != None }}' type="password" id="verify" name="verify" class="form-control" required>
+            {% endif %}
+            <div class="invalid-feedback">
+                Password dont match
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="email" class="form-control-label">E-mail</label>
+            {% if error and error == 'Email already taken' %}
+                <input value='{{ email if email != None }}' type="email" id="email" name="email" class="form-control is-invalid" required>
+            {% else %}
+                <input value='{{ email if email != None }}' type="email" id="email" name="email" class="form-control">
+            {% endif %}
+            <div class="invalid-feedback">
+                Email already taken please choose another one
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
