--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 
-{% if user %}
-    Hello {{user}}
+{% if username %}
+    Hello {{username}}
     <form action="/logout" method="post">
         <input type="submit" />
     </form>
