--- a/templates/login.html
+++ b/templates/login.html
@@ -9,14 +9,16 @@
 <body>
 
     {% include "header.html" %}
+
+    {{error}} - {{username}}
     <form action="/login" method="POST">
         <div class="form-group">
             <label for="username" class="form-control-label">Username</label>
-            <input type="text" id="username" name="username" required placeholder="User ID or email"/>
+            <input value='{{ username if username != None }}' type="text" id="username" name="username" required placeholder="User ID or email"/>
         </div>
         <div class="form-group">
             <label for="password" class="form-control-label">Username</label>
-            <input type="text" id="password" name="password" required placeholder="Password"/>
+            <input type="password" id="password" name="password" required placeholder="Password"/>
         </div>
         <input type="submit" class="btn btn-primary"/>
     </form>
