--- a/templates/post.html
+++ b/templates/post.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{% action %} Post</title>
+    <title> Post</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" crossorigin="anonymous">
 </head>
 <body>
 
     {% include "header.html" %}
+
+
+    {{post}}
+
+
+    POST BY {{post.author}} with id {{post.id}}
+
+
+
+    <form action="/post/manipulate" method="GET">
+        <input type="hidden" name="id" id="id" value="{{post.id}}" />
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" crossorigin="anonymous"></script>
