--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,29 @@
-{% if username %}
-    Hello {{username}}
-    <form action="/logout" method="post">
-        <input type="submit" />
-    </form>
+<style>
+    .navbar-collapse {
+        justify-content: flex-end;
+    }
+    .link-btn {
+        margin: 0 5px;
+    }
 
-{% else %}
-    Hello guest
-{% endif %}
+
+</style>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <a class="navbar-brand" href="/">POC Blog</a>
+    <button class="navbar-toggler" type="button"
+            data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        {% if not username %}
+            <div><a href="/signup"><button class="link-btn btn btn-light">Signup</button></a></div>
+            <div><a href="/login"><button class="link-btn btn btn-light">Login</button></a></div>
+        {% endif %}
+        {% if username %}
+            <span class="navbar-text">Hello, {{username}}!</span>
+            <a href="/logout" class="nav-link light">Logout</a>
+        {% endif %}
+    </div>
+</nav>
