--- a/templates/login.html
+++ b/templates/login.html
@@ -5,24 +5,53 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Login</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <style>
+            body, html {
+                font-family: 'Open Sans', sans-serif;
+                height: 100%;
+                width: 100%;
+            }
+            #app {
+                padding: 20px;
+                box-sizing: border-box;
+                background-color: azure;
+                height: calc(100% - 60px);
+            }
+            form {
+                padding: 20px;
+                box-sizing: border-box;
+                background: white;
+                margin: 10px;
+                border: 1px solid gainsboro;
+                border-radius: 3px;
+            }
+        </style>
     </head>
 <body>
 
     {% include "header.html" %}
 
-    {{error}} - {{username}}
-    <form action="/login" method="POST">
-        <div class="form-group">
-            <label for="username" class="form-control-label">Username</label>
-            <input value='{{ username if username != None }}' type="text" id="username" name="username" required placeholder="User ID or email"/>
-        </div>
-        <div class="form-group">
-            <label for="password" class="form-control-label">Username</label>
-            <input type="password" id="password" name="password" required placeholder="Password"/>
-        </div>
-        <input type="submit" class="btn btn-primary"/>
-    </form>
+     <div id="app">
+         <h2>Login</h2>
+         {% if error %}
+         <div class="alert alert-danger" role="alert">
+            {{error}}
+         </div>
+         {% endif %}
+         <form action="/login" method="POST">
+             <div class="form-group">
+                 <label for="username" class="form-control-label">Username</label>
+                 <input value='{{ username if username != None }}' class="form-control" type="text" id="username" name="username" required placeholder="User ID or email"/>
+             </div>
+             <div class="form-group">
+                 <label for="password" class="form-control-label">Username</label>
+                 <input class="form-control" type="password" id="password" name="password" required placeholder="Password"/>
+             </div>
+             <input type="submit" class="btn btn-primary"/>
+         </form>
 
+     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" crossorigin="anonymous"></script>
