--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,60 +5,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Signup</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <style>
+        body, html {
+            font-family: 'Open Sans', sans-serif;
+            height: 100%;
+            width: 100%;
+        }
+        #app {
+            padding: 20px;
+            box-sizing: border-box;
+            background-color: azure;
+            height: calc(100% - 60px);
+        }
+        form {
+            padding: 20px;
+            box-sizing: border-box;
+            background: white;
+            margin: 10px;
+            border: 1px solid gainsboro;
+            border-radius: 3px;
+        }
+    </style>
 </head>
 <body>
+    {% include "header.html" %}
+    <div id="app">
+        <form action="/signup" method="POST">
+            <div class="form-group">
+                <label for="username" class="form-control-label">Username</label>
 
-    <form action="/signup" method="POST">
-        <div class="form-group">
-            <label for="username" class="form-control-label">Username</label>
-
-            {% if error and error == 'User already exists' %}
-                <input value='{{ username if username != None }}' type="text" id="username" name="username" class="form-control is-invalid" required>
-            {% else %}
-                <input value='{{ username if username != None }}' type="text" id="username" name="username" class="form-control" required>
-            {% endif %}
-            <div class="invalid-feedback">
-                Username already taken please choose another one
+                {% if error and error == 'User already exists' %}
+                    <input value='{{ username_attempt if username_attempt != None }}' type="text" id="username" name="username" class="form-control is-invalid" required>
+                {% else %}
+                    <input value='{{ username_attempt if username_attempt != None }}' type="text" id="username" name="username" class="form-control" required>
+                {% endif %}
+                <div class="invalid-feedback">
+                    Username already taken please choose another one
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="password" class="form-control-label">Password</label>
-            {% if error and error == 'Invalid password' %}
-                <input value='{{ password if password != None }}' type="password" id="password" name="password" class="form-control is-invalid" required>
-            {% else %}
-                <input value='{{ password if password != None }}' type="password" id="password" name="password" class="form-control" required>
-            {% endif %}
-            <div class="invalid-feedback">
-                Invalid password
+            <div class="form-group">
+                <label for="password" class="form-control-label">Password</label>
+                {% if error and error == 'Invalid password' %}
+                    <input value='{{ password if password != None }}' type="password" id="password" name="password" class="form-control is-invalid" required>
+                {% else %}
+                    <input value='{{ password if password != None }}' type="password" id="password" name="password" class="form-control" required>
+                {% endif %}
+                <div class="invalid-feedback">
+                    Invalid password
+                </div>
+                <small id="passwordHelpInline" class="text-muted">
+                    Must be 6-16 characters long.
+                </small>
             </div>
-            <small id="passwordHelpInline" class="text-muted">
-                Must be 6-16 characters long.
-            </small>
-        </div>
-        <div class="form-group">
-            <label for="verify" class="form-control-label">Verify password</label>
-            {% if error and error == 'Password dont match' %}
-                <input value='{{ verify if verify != None }}' type="password" id="verify" name="verify" class="form-control is-invalid" required>
-            {% else %}
-                <input value='{{ verify if verify != None }}' type="password" id="verify" name="verify" class="form-control" required>
-            {% endif %}
-            <div class="invalid-feedback">
-                Password dont match
+            <div class="form-group">
+                <label for="verify" class="form-control-label">Verify password</label>
+                {% if error and error == 'Password dont match' %}
+                    <input value='{{ verify if verify != None }}' type="password" id="verify" name="verify" class="form-control is-invalid" required>
+                {% else %}
+                    <input value='{{ verify if verify != None }}' type="password" id="verify" name="verify" class="form-control" required>
+                {% endif %}
+                <div class="invalid-feedback">
+                    Password dont match
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="email" class="form-control-label">E-mail</label>
-            {% if error and error == 'Email already in use' %}
-                <input value='{{ email if email != None }}' type="email" id="email" name="email" class="form-control is-invalid" required>
-            {% else %}
-                <input value='{{ email if email != None }}' type="email" id="email" name="email" class="form-control">
-            {% endif %}
-            <div class="invalid-feedback">
-                Email already taken please choose another one
+            <div class="form-group">
+                <label for="email" class="form-control-label">E-mail</label>
+                {% if error and error == 'Email already in use' %}
+                    <input value='{{ email if email != None }}' type="email" id="email" name="email" class="form-control is-invalid" required>
+                {% else %}
+                    <input value='{{ email if email != None }}' type="email" id="email" name="email" class="form-control">
+                {% endif %}
+                <div class="invalid-feedback">
+                    Email already taken please choose another one
+                </div>
             </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" crossorigin="anonymous"></script>
